arreglado read